@@ -1,3 +1,7 @@
+Fri Jun 18 20:15:06 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * OpenDDS version 2.1.3 released.
+
 Fri Jun 18 20:08:49 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * README:
